# archestra

./: EXTERNAL_CONTRIBUTORS.md  README.md
.github/release-please/: .release-please-manifest.json
.github/workflows/: honeypot-auto-ban.yml  on-pull-requests.yml
docs/: docs_writer_prompt.md
docs/pages/: platform-access-control.md  platform-adding-knowledge-connectors.md  platform-adding-llm-providers.md  platform-agent-skills.md  platform-archestra-mcp-server.md  platform-chat.md  platform-deployment.md  platform-foundry.md  platform-knowledge-bases.md  platform-knowledge-connectors.md  platform-knowledge-files.md  platform-mastra-example.md  platform-n8n-example.md  platform-openwebui-example.md  platform-orchestrator.md  platform-pydantic-example.md  platform-vercel-ai-example.md
platform/: .dockerignore  .env.example  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  Dockerfile  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json
platform/archestra-rs/: Cargo.toml  deny.toml
platform/archestra-rs/sandbox-core/: Cargo.toml  README.md
platform/archestra-rs/sandbox-core/src/: lib.rs  runtime.rs  session.rs  tracing_ctx.rs
platform/archestra-rs/sandbox-rs/: Cargo.toml  index.cjs  index.d.ts  package.json  panic-smoke.test.cjs  smoke.test.cjs
platform/archestra-rs/sandbox-rs/src/: lib.rs
platform/backend/: knip.config.ts  package.json  tsdown.config.ts
platform/dev/: Tiltfile.integrations  vault-k8s-manual-test.yaml
platform/frontend/: next.config.ts  package.json
platform/mcp_server_docker_image/: pyproject.toml
platform/scripts/: check-dagger-version-sync.sh  (+1 more)
(+296 files in other folders)
