[package]
name = "sandbox_core"
version = "1.2.50"
edition = "2024"
publish = false

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
base64 = "0.22"
dagger-sdk = "=0.21.0"
futures-util = "0.3"
napi = { version = "3", optional = true }
napi-derive = { version = "3", optional = true }
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tracing = "0.1"
tracing-opentelemetry = "0.28"
